<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp">

    <com.octopusbeach.textto.onboarding.SquareLinearLayout
        android:id="@+id/permissions_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:padding="16dp">

            <ImageView
                android:id="@+id/permission_item_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_text" />

            <TextView
                android:id="@+id/permission_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/permission_item_image"
                android:text="@string/text_permission_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/permission_item_image"
                android:gravity="bottom"
                android:text="@string/text_permission_message" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:padding="16dp">

            <ImageView
                android:id="@+id/permission_item_image_1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_agenda" />

            <TextView
                android:id="@+id/permission_item_title_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/permission_item_image_1"
                android:text="@string/contacts_permission_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/permission_item_image_1"
                android:gravity="bottom"
                android:text="@string/contacts_permission_message" />

        </RelativeLayout>

    </com.octopusbeach.textto.onboarding.SquareLinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/permissions_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/permission_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/permissions_message"
            android:textSize="28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/permission_title"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/permissions_title"
            android:textSize="16sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/permission_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/blue"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/enable_permissions" />
</RelativeLayout>